TanStack Query added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,3 +42,8 @@ a {
     color-scheme: dark;
   }
 }
+
+/* override mui styles */
+.MuiDataGrid-cell.MuiDataGrid-cell--editing:focus-within {
+  outline: none !important;
+}
